# zk_rollup

./: README.md  affine_circuit.rs  aggregator_circuit.rs  generate_aggregator_keys.rs  layouter_circuit.rs  lib.rs  my_fq_circuit.rs  recursive_circuit.rs  verifier_circuit.rs  zk_rollup.rs
src/: aggregator_circuit.rs  lib.rs  my_fq_circuit.rs  pai_circuit.rs  semaphore.rs  verifier_circuit.rs  zk_rollup
src2/: Cargo.toml  affine_circuit.rs  bin  halo2_circuit.rs  lib.rs  pai_circuit.rs  verifier_circuit.rs
v3/: zk_rollup
