[package]
name = "halo2_minimal"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = "=0.3.1"
pasta_curves = "0.5.1"
flate2 = "1.0"   
# Pós-quântica
bytes = "1.10.1"
# Hashes
tiny-keccak = { version = "2.0", features = ["keccak"] }
sha2 = "0.10"
verify = "0.3.2"
base64 = "0.22.1"
# Blockchain
solana-program = "3.0.0"
pqcrypto-traits = "0.3.5"
# Serialização / JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

crystals-dilithium = "1.0.0"
warp = { version = "0.4.2", features = ["server"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
ff = "=0.13.1"
# CLI e utilitários
arrayref = "0.3.9"
anyhow = "1.0"
structopt = "0.3"
halo2-base = "0.5.1"
# Aleatoriedade / tempo
rand = "0.8"
halo2_gadgets = "0.3.1"
chrono = "0.4"
params = "0.8.0"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
ark-std = { version = "0.3.0", features = ["print-trace"] }
regex = "1.8.1"
hex = "0.4.3"
minha_lib = { path = "../minha_lib" }
group = "0.12"
blake2b_simd = "1.0"
halo2_poseidon = "0.1.0"
serde_yml = "0.0.12"
